spacing fixed

--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
+/* header */
 
 .header{
   display: flex;
   justify-content: space-between;
-
 }
-
 
 .logo{
   display: inline-flex;
@@ -19,13 +18,10 @@
   padding-left: 10px;
 }
 
-
-
 .nav{
   display: flex;
   align-items: center;
 }
-
 
 span{
   font-family: Verdana;
@@ -36,7 +32,109 @@ span{
 }
 
 
-
 div{
   border: .25px solid grey;
+}
+
+/*body */
+
+.column{
+  display: flex;
+  justify-content: space-around;
+}
+
+
+.large{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 630px;
+
+}
+
+.medium{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 300px;
+
+}
+
+.small {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 240px;
+  margin-left: 30px;
+
+}
+
+.story{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.mother{
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
+}
+
+.cats{
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+}
+
+
+.quarter{
+  display: flex;
+  flex-direction: column;
+  /* 4 justify-content: space-between; */
+}
+
+.small_story{
+  display: flex;
+}
+
+
+.bottom{
+  display: flex;
+
+}
+
+.earth{
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
+  background-repeat: no-repeat;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+
+}
+
+.cameras{
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
+  background-repeat: no-repeat;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+
+
+
+}
+
+
+p{
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
 }
